--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -8,5 +8,8 @@ WORKDIR /drago-bot/
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV TELEGRAM_BOT_TOKEN None
 ENV DRAGO_CONTRACT_ADDRESS 5D9LBmEeWjKXZs8JRaP8YdBDdkdQPwu9mATXTcMUq7YU
+ENV DRAGO_TELEGRAM_CHANNEL_ID_RU -1001704683286
+ENV DRAGO_TELEGRAM_CHANNEL_ID_EN -1002133930469
+
 
 RUN pip install -r requirements.txt
