--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -9,7 +9,9 @@ ENV PYTHONDONTWRITEBYTECODE 1
 ENV TELEGRAM_BOT_TOKEN None
 ENV DRAGO_CONTRACT_ADDRESS 5D9LBmEeWjKXZs8JRaP8YdBDdkdQPwu9mATXTcMUq7YU
 ENV DRAGO_TELEGRAM_CHANNEL_ID_RU -1001704683286
+ENV DRAGO_TELEGRAM_CHAT_ID_RU -1001625753751
 ENV DRAGO_TELEGRAM_CHANNEL_ID_EN -1002133930469
+ENV DRAGO_TELEGRAM_CHAT_ID_EN -1002022162228
 
 
 RUN pip install -r requirements.txt
