--- a/.env-example
+++ b/.env-example
@@ -2,4 +2,6 @@ TELEGRAM_CONTAINER_NAME=telegram
 TELEGRAM_BOT_TOKEN=
 DRAGO_CONTRACT_ADDRESS=5D9LBmEeWjKXZs8JRaP8YdBDdkdQPwu9mATXTcMUq7YU
 DRAGO_TELEGRAM_CHANNEL_ID_RU=-1001704683286
+DRAGO_TELEGRAM_CHAT_ID_RU=-1001625753751
 DRAGO_TELEGRAM_CHANNEL_ID_EN=-1002133930469
+DRAGO_TELEGRAM_CHAT_ID_EN=-1002022162228
