--- a/.env-example
+++ b/.env-example
@@ -5,3 +5,13 @@ DRAGO_TELEGRAM_CHANNEL_ID_RU=-1001704683286
 DRAGO_TELEGRAM_CHAT_ID_RU=-1001625753751
 DRAGO_TELEGRAM_CHANNEL_ID_EN=-1002133930469
 DRAGO_TELEGRAM_CHAT_ID_EN=-1002022162228
+DRAGO_PRICE_TELEGRAM_CHANNEL_ID=-1002083449151
+DEV_TELEGRAM_USER_ID=1840037832
+
+POSTGRES_CONTAINER_NAME=postgres
+POSTGRES_CONTAINER_HOST=postgres
+POSTGRES_CONTAINER_PORT=5432
+POSTGRES_DB=token_info
+POSTGRES_USER=drago_holder
+POSTGRES_PASSWORD=drago2onedollar
+PGDATA=/data/postgres
