--- a/bot/Dockerfile
+++ b/bot/Dockerfile
@@ -12,6 +12,14 @@ ENV DRAGO_TELEGRAM_CHANNEL_ID_RU -1001704683286
 ENV DRAGO_TELEGRAM_CHAT_ID_RU -1001625753751
 ENV DRAGO_TELEGRAM_CHANNEL_ID_EN -1002133930469
 ENV DRAGO_TELEGRAM_CHAT_ID_EN -1002022162228
+ENV DRAGO_PRICE_TELEGRAM_CHANNEL_ID -1002083449151
+ENV DEV_TELEGRAM_USER_ID 1840037832
 
+ENV POSTGRES_CONTAINER_NAME postgres
+ENV POSTGRES_CONTAINER_HOST postgres
+ENV POSTGRES_CONTAINER_PORT 5432
+ENV POSTGRES_DB token_info
+ENV POSTGRES_USER drago_holder
+ENV POSTGRES_PASSWORD drago2onedollarjhgghghgghghjjg
 
 RUN pip install -r requirements.txt
