--- a/bot/requirements.txt
+++ b/bot/requirements.txt
@@ -1,8 +1,10 @@
 aiogram==3.3.0
 aiohttp==3.9.0
 asyncio==3.4.3
+asyncpg==0.27.0
 pydantic==2.5.1
 loguru==0.7.2
 python-dotenv==1.0.0
 orjson==3.9.10
+SQLAlchemy==2.0.9
 # ciso8601==2.3.1
